objects/Case_Status_History__c.object
<CustomObject>
    <description>Captures details on case status changes</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Status Histories</relationshipLabel>
        <relationshipName>Case_Status_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Closed_DateTime__c</fullName>
        <description>The Date and Time that this status was changed to something else. The current status entry will have a null value for this field. This is used to calculate minutes-in-status.</description>
        <label>Closed DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsStopped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the SLA clock is stopped during this status or not.</description>
        <inlineHelpText>Indicates whether the SLA clock is stopped during this status or not.</inlineHelpText>
        <label>IsStopped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Status_Detail__c</fullName>
        <label>Old Status Detail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Status__c</fullName>
        <label>Previous Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RawMinutesInStatus__c</fullName>
        <formula>IF(IsStopped__c,
    0,
    IF(ISNULL(Closed_DateTime__c), 
        -1,
        (Closed_DateTime__c -  CreatedDate)*1440
      )  
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RawMinutesInStatus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Changed__c</fullName>
        <label>Status Changed</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <label>Status Detail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Case Status History</label>
    <nameField>
        <displayFormat>CSH-{0000000000}</displayFormat>
        <label>Case Status History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Status Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>